# project

./: Cargo.toml  README.md  readme.md
.github/workflows/: cd.yml
src/: cli.rs  command_parser.rs  config.rs  main.rs  menu.rs  prelude.rs  project.rs
