[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
directories = "5.0.1"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.21"
